--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   </style>
 </head>
 <body>
-    <iframe id="ifra" name="ifra" width="100%" height="100%" src="http://ximyan.free.idcfengye.com/diandian-album/h5/index-flex.html"></iframe>
+    <iframe id="ifra" name="ifra" width="100%" height="100%" src="https://diandian.free.idcfengye.com/diandian-album/h5/index-flex.html"></iframe>
 </body>
 </html>
